# NOVA-CAD

./: Executive-Summary.md  NOVA-CAD-Review-Prompt.md  README.md  ziTj7SVf
nova_cad/: .gitignore  AGENTS.md  DIAGNOSTIC_GUIDE.md  Executive-Summary.md  IMPLEMENTATION_SUMMARY.md  README.md  ROADMAP.md  SPECIFICATION.md  VALIDATION_CHECKLIST.md  VIEWPORT_DEBUG_REPORT.md  build.sh  collect-diagnostics.ps1
nova_cad/NovaCAD/: .gitignore  NovaCAD.sln
nova_cad/NovaCAD/src/NovaCad.App/: App.axaml  App.axaml.cs  NovaCad.App.csproj  Program.cs  app.manifest
nova_cad/NovaCAD/src/NovaCad.App/ViewModels/: MainWindowViewModel.cs
nova_cad/NovaCAD/src/NovaCad.App/Views/: MainWindow.axaml  MainWindow.axaml.cs
nova_cad/NovaCAD/src/NovaCad.Core/: NovaCad.Core.csproj
nova_cad/NovaCAD/src/NovaCad.Core/Models/: NovaDocument.cs
nova_cad/NovaCAD/src/NovaCad.Kernel/: NovaCad.Kernel.csproj  NovaKernel.cs  NovaKernelStub.cs
nova_cad/NovaCAD/src/NovaCad.UI/: NovaCad.UI.csproj
nova_cad/NovaCAD/src/NovaCad.Viewport/: BoundingBox.cs  Camera3D.cs  Color.cs  GlConstants.cs  GlExtensions.cs  IViewportViewModel.cs  Mesh.cs  MeshFactory.cs  MoldTools.cs  NovaCad.Viewport.csproj  Renderer.cs  SelectionManager.cs  Shader.cs  SteeringWheelOverlay.cs  TransformGizmo.cs  Viewport3D.cs  ViewportControl.cs  ViewportDiagnostics.cs  ViewportMouseButton.cs
nova_cad/nova_kernel/: Cargo.toml
nova_cad/nova_kernel/crates/nova_check/: Cargo.toml
nova_cad/nova_kernel/crates/nova_check/src/: lib.rs
nova_cad/nova_kernel/crates/nova_ffi/: Cargo.toml
nova_cad/nova_kernel/crates/nova_ffi/src/: lib.rs
nova_cad/nova_kernel/crates/nova_geom/: Cargo.toml
nova_cad/nova_kernel/crates/nova_geom/src/: curve.rs  intersection.rs  lib.rs  nurbs.rs  surface.rs
nova_cad/nova_kernel/crates/nova_io/: Cargo.toml
nova_cad/nova_kernel/crates/nova_io/src/: iges.rs  lib.rs  nova_format.rs  step.rs  stl.rs
nova_cad/nova_kernel/crates/nova_kernel/: Cargo.toml
nova_cad/nova_kernel/crates/nova_kernel/src/: lib.rs
nova_cad/nova_kernel/crates/nova_math/: Cargo.toml
nova_cad/nova_kernel/crates/nova_math/src/: bbox.rs  interval.rs  lib.rs  matrix.rs  plane.rs  point.rs  predicates.rs  quaternion.rs  tolerance.rs  transform.rs  vector.rs
nova_cad/nova_kernel/crates/nova_ops/: Cargo.toml
nova_cad/nova_kernel/crates/nova_ops/src/: boolean.rs  error.rs  feature.rs  fillet.rs  lib.rs  split.rs  transform.rs
nova_cad/nova_kernel/crates/nova_sync/: Cargo.toml
nova_cad/nova_kernel/crates/nova_sync/src/: error.rs  face_edit.rs  face_edit_impl.rs  feature_handle.rs  lib.rs  live_rules.rs  recognition.rs  resolve.rs  steering_wheel.rs
nova_cad/nova_kernel/crates/nova_tess/: Cargo.toml
nova_cad/nova_kernel/crates/nova_tess/src/: lib.rs
nova_cad/nova_kernel/crates/nova_topo/: Cargo.toml
nova_cad/nova_kernel/crates/nova_topo/src/: body.rs  entity.rs  euler.rs  euler_advanced.rs  lib.rs
