[package]
name = "nova_io"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Import/Export for Nova Kernel 3D (STEP, IGES, STL)"

[dependencies]
nova_math = { path = "../nova_math" }
nova_geom = { path = "../nova_geom" }
nova_topo = { path = "../nova_topo" }

thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
nom = "7.1"  # Parser combinator for STEP
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
