[package]
name = "nova_math"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Mathematical foundation for Nova Kernel 3D"

[dependencies]
nalgebra = { workspace = true, features = ["serde-serialize"] }
num-traits.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
approx = "0.5"

[lib]
name = "nova_math"
path = "src/lib.rs"
