[package]
name = "nova_tess"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
nova_math = { path = "../nova_math" }
nova_geom = { path = "../nova_geom" }
nova_topo = { path = "../nova_topo" }
nalgebra = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
